--- a/Conferenceware/Settings.resx
+++ b/Conferenceware/Settings.resx
@@ -117,6 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="AttendeeBadgeBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\attendee.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="EmailFrom" xml:space="preserve">
     <value>conference@acm.illinois.edu</value>
     <comment>From email address for outgoing messages</comment>
@@ -135,5 +139,20 @@
   <data name="FrontpageTitle" xml:space="preserve">
     <value>Welcome to Conferenceware</value>
     <comment>Title for the Front Page</comment>
+  </data>
+  <data name="MechmaniaBadgeBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\mechmania.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SpeakerBadgeBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\speaker.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SponsorBadgeBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\sponsor.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="StaffBadgeBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\staff.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="VolunteerBadgeBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\volunteer.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
